--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Environment and secrets
+.env
+.env.local
+.env.*.local
+*.key
+*.pem
+
 # Python
 __pycache__/
 *.py[cod]
@@ -16,6 +23,8 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -25,41 +34,53 @@ MANIFEST
 venv/
 env/
 ENV/
+env.bak/
+venv.bak/
 
-# Environment Variables
-.env
-.env.local
-.env.production
-
-# IDE
+# IDEs
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
+.DS_Store
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pytest
+.pytest_cache/
+.coverage
+htmlcov/
 
 # Logs
 *.log
 logs/
+*.log.*
 
 # Database
 *.db
+*.sqlite
 *.sqlite3
+
+# MongoDB
+data/
+mongodb/
 
 # Cache
 .cache/
-.pytest_cache/
-
-# Coverage
-htmlcov/
-.coverage
-.coverage.*
-coverage.xml
-
-# MyPy
-.mypy_cache/
-.dmypy.json
-dmypy.json
+*.cache
 
 # OS
-.DS_Store
 Thumbs.db
+.DS_Store
+
+# Project specific
+.kiro/config/app_config.json
+*.bak
+*.tmp
+temp/
+
+# Documentation builds
+docs/_build/
+site/
