--- a/.env.example
+++ b/.env.example
@@ -8,19 +8,6 @@ ANTHROPIC_API_KEY=your_anthropic_api_key_here
 ANTHROPIC_MODEL=claude-3-haiku-20240307
 
 # =============================================================================
-# MongoDB Configuration
-# =============================================================================
-# Local development (no authentication)
-MONGODB_URL=mongodb://localhost:27017/
-MONGODB_DATABASE=nasdaq_stock_agent
-
-# Production MongoDB Authentication (for docker-compose.prod.yml)
-MONGO_ROOT_USERNAME=admin
-MONGO_ROOT_PASSWORD=change_this_secure_root_password
-MONGO_USERNAME=nasdaq_user
-MONGO_PASSWORD=change_this_secure_user_password
-
-# =============================================================================
 # Application Configuration
 # =============================================================================
 APP_NAME=NASDAQ Stock Agent
@@ -60,36 +47,54 @@ MCP_PORT=8001
 # =============================================================================
 # NEST Framework Configuration - NANDA Registry Integration
 # =============================================================================
+# Enable/disable NEST integration (true/false)
+# When enabled, the agent will support A2A (Agent-to-Agent) communication
 NEST_ENABLED=false
-NEST_AGENT_ID=nasdaq-stock-agent
-NEST_AGENT_NAME=NASDAQ Stock Agent
+
+# A2A Server Configuration
+# Port for the A2A server (default: 6000)
 NEST_PORT=6000
 
 # IMPORTANT: Replace with your actual public IP or domain for production
+# This is the public URL where other agents can reach this agent's A2A endpoint
+# Example: http://your-public-ip:6000 or https://your-domain.com:6000
 NEST_PUBLIC_URL=http://YOUR_PUBLIC_IP:6000
 
-# Registry URLs
+# NANDA Registry Configuration
+# URL of the NANDA Registry for agent discovery and registration
 NEST_REGISTRY_URL=http://registry.chat39.com:6900
-NEST_MCP_REGISTRY_URL=
 
-# NEST Features
-NEST_TELEMETRY=true
-NEST_DUAL_MODE=false
+# Agent Identity
+# Unique identifier for this agent in the NEST network
+NEST_AGENT_ID=nasdaq-stock-agent
+
+# Display name for the agent
+NEST_AGENT_NAME=NASDAQ Stock Agent
 
 # Agent Metadata
+# Domain of expertise for the agent
 NEST_DOMAIN=financial analysis
+
+# Specific specialization within the domain
 NEST_SPECIALIZATION=NASDAQ stock analysis and investment recommendations
-NEST_CAPABILITIES=stock_analysis,technical_analysis,fundamental_analysis,investment_recommendations,market_data
-NEST_EXPERTISE=NASDAQ stock analysis,Technical indicators (RSI MACD Moving Averages),Fundamental analysis (P/E EPS Revenue),Market sentiment analysis,Investment recommendations (BUY SELL HOLD),Risk assessment,Portfolio optimization
-NEST_SYSTEM_PROMPT=You are an expert NASDAQ stock analysis agent. Your role is to provide comprehensive data-driven investment analysis and recommendations for NASDAQ-listed stocks.
-NEST_VERSION=1.0.0
-NEST_DESCRIPTION=AI-powered stock analysis agent providing comprehensive investment analysis for NASDAQ stocks
+
+# Description of agent capabilities (used for agent discovery)
+NEST_DESCRIPTION=AI-powered agent that provides comprehensive stock analysis, technical and fundamental analysis, investment recommendations, and risk assessment for NASDAQ-listed stocks
 
 # =============================================================================
 # Setup Instructions
 # =============================================================================
 # 1. Copy this file: cp .env.example .env
 # 2. Update ANTHROPIC_API_KEY with your actual API key
-# 3. For production: Update MongoDB passwords
-# 4. For NEST: Update NEST_PUBLIC_URL with your public IP/domain
-# 5. Adjust other settings as needed for your environment
+# 3. For NEST Integration:
+#    - Set NEST_ENABLED=true to enable A2A communication
+#    - Update NEST_PUBLIC_URL with your public IP or domain
+#    - Ensure port 6000 is open in your firewall/security group
+#    - The agent will register with NANDA Registry on startup
+# 4. Adjust other settings as needed for your environment
+#
+# NEST Integration Notes:
+# - When NEST_ENABLED=false, the agent runs in REST-only mode (port 8000)
+# - When NEST_ENABLED=true, both REST (8000) and A2A (6000) servers run
+# - Registry registration is automatic and includes retry logic
+# - If python-a2a is not installed, NEST features will be disabled automatically
