--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,6 @@ anthropic>=0.7.0,<1.0.0
 # Market data
 yfinance>=0.2.32
 
-# Database
-pymongo>=4.6.0,<5.0.0
-motor>=3.3.0,<4.0.0
-
 # Additional dependencies
 pydantic>=2.0.0,<3.0.0
 pydantic-settings>=2.0.0,<3.0.0
@@ -33,6 +29,7 @@ mcp>=0.9.0
 
 # NEST Framework (NANDA Sandbox and Testbed)
 python-a2a>=0.1.0
+requests>=2.31.0,<3.0.0
 
 # Development dependencies
 pytest>=7.4.0,<9.0.0
